--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Home</title>
 </head>
 <body>
@@ -91,8 +92,351 @@
         </div>
     </div>
     </div>
-    
-</div>
+    <div id="wrapper">
+    <main class="main-content">
+    <section class="slideshow">
+        <div class="slideshow-inner">
+        <div class="slides">
+            <div class="slide is-active ">
+            <div class="slide-content">
+                <div class="caption">
+                <div class="title">CREATE YOUR VENENO</div>
+                <div class="text">
+                    <p>CONFIGURATOR</p>
+                </div> 
+                <a href="#" class="btn">
+                    <span class="btn-inner">Learn More</span>
+                </a>
+                </div>
+            </div>
+            <div class="image-container"> 
+                <img src="https://images.pexels.com/photos/3752169/pexels-photo-3752169.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" style="object-fit: cover;" alt="" class="image" />
+            </div>
+            </div>
+            <div class="slide">
+            <div class="slide-content">
+                <div class="caption">
+                <div class="title">CREATE YOUR AVENTADOR</div>
+                <div class="text">
+                    <p>CONFIGURATOR</p>
+                </div> 
+                <a href="#" class="btn">
+                    <span class="btn-inner">Learn More</span>
+                </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="https://images.pexels.com/photos/2896135/pexels-photo-2896135.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"style="object-fit: cover;" alt="" class="image" />
+            </div>
+            </div>
+            <div class="slide">
+            <div class="slide-content">
+                <div class="caption">
+                <div class="title">CREATE YOUR HURACÁN</div>
+                <div class="text">
+                    <p>CONFIGURATOR</p>
+                </div> 
+                <a href="#" class="btn">
+                    <span class="btn-inner">Learn More</span>
+                </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="https://images.pexels.com/photos/10804347/pexels-photo-10804347.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"style="object-fit: cover;" alt="" class="image" />
+            </div>
+            </div>
+            <div class="slide">
+            <div class="slide-content">
+                <div class="caption">
+                <div class="title">CREATE YOUR URUS</div>
+                <div class="text">
+                    <p>CONFIGURATOR</p>
+                </div> 
+                <a href="#" class="btn">
+                    <span class="btn-inner">Learn More</span>
+                </a>
+                </div>
+            </div>
+            <div class="image-container"> 
+                <img src="https://images.pexels.com/photos/8237007/pexels-photo-8237007.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"style="object-fit: cover;" alt="" class="image" />
+            </div>
+            </div>
+        </div>
+        <div class="pagination">
+            <div class="item is-active"> 
+            <span class="icon">1</span>
+            </div>
+            <div class="item">
+            <span class="icon">2</span>
+            </div>
+            <div class="item">
+            <span class="icon">3</span>
+            </div>
+            <div class="item">
+            <span class="icon">4</span>
+            </div>
+        </div>
 
+        </div> 
+    </section>
+    </main>
+    <div class="map">
+        <img src="https://images.pexels.com/photos/3422964/pexels-photo-3422964.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <div class="map-container">
+            <h6>DEALER LOCATOR</h6>
+            <h1>FIND YOUR COUNTRY DEALER</h1>
+            <a href="#">Learn More</a>
+        </div>
+    </div>
+    <div class="news-container container p-4">
+        <div class="news-fs p-1">
+            <h3>NEWS</h3>
+            <H1>LAMBORGHINI WORLD</H1>
+            <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/news/2023/03_09_bfc_lego/cover_desktop.jpg" alt="">
+        </div>
+        <div class="news-details">   
+            <h6>9 MARCH 2023</h6>
+            <div class="news-title-details">
+                <h1>LAMBORGHINI AND BOLOGNA FC: A LEGO TO CELEBRATE THE PARTNERSHIP</h1>
+                <a href="#">READ MORE</a>
+            </div>
+                <span>The partnership between Lamborghini and Bologna Fc 1909 is honored and once again sanctioned by the reproduction in Lego of the torre di Maratona, symbol of the stadium Renato Dall'Ara, made with 20,000 bricks.</span>
+            </div>
+        </div>
+    <div>
+    <div class="new-list container">
+            <ul>
+            <li>
+                <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/news/2023/03_07_lb744/cover_d.jpg" alt="">
+                <div class="news-item-container">
+                    <h6>8 MARCH 2023</h6>
+                    <a href="#">CATEGORY</a>
+                    <h1>LAMBORGHINI LB744: NEW BENCHMARK FOR HYBRID SUPER SPORTS CARS</h1>
+                    <div class="read-moe">
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
+            </li>
+            <li class="news-item"></li>
+        </ul>
+    </div>
+    <div class="more container" style="text-align: center;">
+        <a href="">SEE ALL</a>
+    </div>
+
+</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+    <script>
+            var slideshowDuration = 4000;
+            var slideshow=$('.main-content .slideshow');
+
+            function slideshowSwitch(slideshow,index,auto){
+            if(slideshow.data('wait')) return;
+
+            var slides = slideshow.find('.slide');
+            var pages = slideshow.find('.pagination');
+            var activeSlide = slides.filter('.is-active');
+            var activeSlideImage = activeSlide.find('.image-container');
+            var newSlide = slides.eq(index);
+            var newSlideImage = newSlide.find('.image-container');
+            var newSlideContent = newSlide.find('.slide-content');
+            var newSlideElements=newSlide.find('.caption > *');
+            if(newSlide.is(activeSlide))return;
+
+            newSlide.addClass('is-new');
+            var timeout=slideshow.data('timeout');
+            clearTimeout(timeout);
+            slideshow.data('wait',true);
+            var transition=slideshow.attr('data-transition');
+            if(transition=='fade'){
+                newSlide.css({
+                display:'block',
+                zIndex:2
+                });
+                newSlideImage.css({
+                opacity:0
+                });
+
+                TweenMax.to(newSlideImage,1,{
+                alpha:1,
+                onComplete:function(){
+                    newSlide.addClass('is-active').removeClass('is-new');
+                    activeSlide.removeClass('is-active');
+                    newSlide.css({display:'',zIndex:''});
+                    newSlideImage.css({opacity:''});
+                    slideshow.find('.pagination').trigger('check');
+                    slideshow.data('wait',false);
+                    if(auto){
+                    timeout=setTimeout(function(){
+                        slideshowNext(slideshow,false,true);
+                    },slideshowDuration);
+                    slideshow.data('timeout',timeout);}}});
+            } else {
+                if(newSlide.index()>activeSlide.index()){
+                var newSlideRight=0;
+                var newSlideLeft='auto';
+                var newSlideImageRight=-slideshow.width()/8;
+                var newSlideImageLeft='auto';
+                var newSlideImageToRight=0;
+                var newSlideImageToLeft='auto';
+                var newSlideContentLeft='auto';
+                var newSlideContentRight=0;
+                var activeSlideImageLeft=-slideshow.width()/4;
+                } else {
+                var newSlideRight='';
+                var newSlideLeft=0;
+                var newSlideImageRight='auto';
+                var newSlideImageLeft=-slideshow.width()/8;
+                var newSlideImageToRight='';
+                var newSlideImageToLeft=0;
+                var newSlideContentLeft=0;
+                var newSlideContentRight='auto';
+                var activeSlideImageLeft=slideshow.width()/4;
+                }
+
+                newSlide.css({
+                display:'block',
+                width:0,
+                right:newSlideRight,
+                left:newSlideLeft
+                ,zIndex:2
+                });
+
+                newSlideImage.css({
+                width:slideshow.width(),
+                right:newSlideImageRight,
+                left:newSlideImageLeft
+                });
+
+                newSlideContent.css({
+                width:slideshow.width(),
+                left:newSlideContentLeft,
+                right:newSlideContentRight
+                });
+
+                activeSlideImage.css({
+                left:0
+                });
+
+                TweenMax.set(newSlideElements,{y:20,force3D:true});
+                TweenMax.to(activeSlideImage,1,{
+                left:activeSlideImageLeft,
+                ease:Power3.easeInOut
+                });
+
+                TweenMax.to(newSlide,1,{
+                width:slideshow.width(),
+                ease:Power3.easeInOut
+                });
+
+                TweenMax.to(newSlideImage,1,{
+                right:newSlideImageToRight,
+                left:newSlideImageToLeft,
+                ease:Power3.easeInOut
+                });
+
+                TweenMax.staggerFromTo(newSlideElements,0.8,{alpha:0,y:60},{alpha:1,y:0,ease:Power3.easeOut,force3D:true,delay:0.6},0.1,function(){
+                newSlide.addClass('is-active').removeClass('is-new');
+                activeSlide.removeClass('is-active');
+                newSlide.css({
+                    display:'',
+                    width:'',
+                    left:'',
+                    zIndex:''
+                });
+
+                newSlideImage.css({
+                    width:'',
+                    right:'',
+                    left:''
+                });
+
+                newSlideContent.css({
+                    width:'',
+                    left:''
+                });
+
+                newSlideElements.css({
+                    opacity:'',
+                    transform:''
+                });
+
+                activeSlideImage.css({
+                    left:''
+                });
+
+                slideshow.find('.pagination').trigger('check');
+                slideshow.data('wait',false);
+                if(auto){
+                    timeout=setTimeout(function(){
+                    slideshowNext(slideshow,false,true);
+                    },slideshowDuration);
+                    slideshow.data('timeout',timeout);
+                }
+                });
+            }
+            }
+
+            function slideshowNext(slideshow,previous,auto){
+            var slides=slideshow.find('.slide');
+            var activeSlide=slides.filter('.is-active');
+            var newSlide=null;
+            if(previous){
+                newSlide=activeSlide.prev('.slide');
+                if(newSlide.length === 0) {
+                newSlide=slides.last();
+                }
+            } else {
+                newSlide=activeSlide.next('.slide');
+                if(newSlide.length==0)
+                newSlide=slides.filter('.slide').first();
+            }
+
+            slideshowSwitch(slideshow,newSlide.index(),auto);
+            }
+
+            function homeSlideshowParallax(){
+            var scrollTop=$(window).scrollTop();
+            if(scrollTop>windowHeight) return;
+            var inner=slideshow.find('.slideshow-inner');
+            var newHeight=windowHeight-(scrollTop/2);
+            var newTop=scrollTop*0.8;
+
+            inner.css({
+                transform:'translateY('+newTop+'px)',height:newHeight
+            });
+            }
+
+            $(document).ready(function() {
+            $('.slide').addClass('is-loaded');
+
+            $('.slideshow .arrows .arrow').on('click',function(){
+            slideshowNext($(this).closest('.slideshow'),$(this).hasClass('prev'));
+            });
+
+            $('.slideshow .pagination .item').on('click',function(){
+            slideshowSwitch($(this).closest('.slideshow'),$(this).index());
+            });
+
+            $('.slideshow .pagination').on('check',function(){
+            var slideshow=$(this).closest('.slideshow');
+            var pages=$(this).find('.item');
+            var index=slideshow.find('.slides .is-active').index();
+            pages.removeClass('is-active');
+            pages.eq(index).addClass('is-active');
+            });
+
+            var timeout=setTimeout(function(){
+            slideshowNext(slideshow,false,true);
+            },slideshowDuration);
+
+            slideshow.data('timeout',timeout);
+            });
+
+            if($('.main-content .slideshow').length > 1) {
+            $(window).on('scroll',homeSlideshowParallax);
+            }
+    </script>
 </body>
 </html>
