--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -5,7 +5,8 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  font-family: 'Sunflower'; }
+  font-family: 'Sunflower';
+  letter-spacing: 0.05em; }
 
 .fullscreen {
   width: 100vw;
@@ -262,3 +263,303 @@ body {
     display: block;
     margin-right: 0;
     font-weight: 600; } }
+
+.btn {
+  display: inline-block;
+  padding: 13px 20px;
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  background: transparent;
+  border: 1px solid #e1e1e1;
+  font: 12px/1.2 "Oswald", sans-serif;
+  letter-spacing: 0.4em;
+  text-align: center;
+  text-indent: 2px;
+  text-transform: uppercase;
+  transition: color 0.1s linear 0.05s; }
+  .btn::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #e1e1e1;
+    z-index: 1;
+    opacity: 0;
+    transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s; }
+  .btn::after {
+    transition: border 0.1s linear 0.05s; }
+  .btn .btn-inner {
+    position: relative;
+    z-index: 2; }
+  .btn:hover {
+    color: #373737;
+    transition: color 0.1s linear 0s; }
+    .btn:hover::before {
+      top: 0;
+      height: 100%;
+      opacity: 1;
+      transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s; }
+    .btn:hover::after {
+      border-color: #373737;
+      transition: border 0.1s linear 0s; }
+
+.slideshow {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 420px;
+  z-index: 1; }
+  .slideshow .slideshow-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  .slideshow .slides {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; }
+  .slideshow .slide {
+    display: none;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s ease; }
+    .slideshow .slide.is-active {
+      display: block; }
+    .slideshow .slide.is-loaded {
+      opacity: 1; }
+    .slideshow .slide .caption {
+      padding: 0 100px; }
+    .slideshow .slide .image-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      z-index: 1;
+      background-size: cover;
+      image-rendering: optimizeQuality; }
+      .slideshow .slide .image-container::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); }
+    .slideshow .slide .image {
+      width: 100%;
+      width: 100%;
+      object-fit: cover;
+      height: 100%; }
+    .slideshow .slide-content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      color: #fff;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .slideshow .slide .title {
+      margin: 0 auto 15px;
+      max-width: 1000px;
+      font: 300 50px/1.2 "Oswald", sans-serif;
+      letter-spacing: 0.35em;
+      text-transform: uppercase; }
+    .slideshow .slide .text {
+      margin: 0 auto;
+      max-width: 1000px;
+      font-size: 18px;
+      line-height: 1.4; }
+    .slideshow .slide .btn {
+      margin: 15px 0 0;
+      border-color: #fff; }
+      .slideshow .slide .btn::before {
+        background: #fff; }
+  .slideshow .pagination {
+    position: absolute;
+    bottom: 35px;
+    left: 0;
+    width: 100%;
+    height: 12px;
+    cursor: default;
+    z-index: 2;
+    text-align: center; }
+    .slideshow .pagination .item {
+      display: inline-block;
+      padding: 15px 5px;
+      position: relative;
+      width: 46px;
+      height: 32px;
+      cursor: pointer;
+      text-indent: -999em;
+      z-index: 1; }
+      .slideshow .pagination .item + .page {
+        margin-left: -2px; }
+      .slideshow .pagination .item::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 15px;
+        left: 5px;
+        width: 36px;
+        height: 2px;
+        background: rgba(255, 255, 255, 0.5);
+        transition: background 0.2s ease; }
+      .slideshow .pagination .item::after {
+        width: 0;
+        background: #fff;
+        z-index: 2;
+        transition: width 0.2s ease; }
+      .slideshow .pagination .item:hover::before, .slideshow .pagination .item.is-active::before {
+        background-color: #fff; }
+  .slideshow .arrows .arrow {
+    margin: -33px 0 0;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    z-index: 3; }
+  .slideshow .arrows .prev {
+    left: 30px; }
+    .slideshow .arrows .prev:hover .svg {
+      left: -10px; }
+  .slideshow .arrows .next {
+    right: 30px; }
+    .slideshow .arrows .next:hover .svg {
+      left: 10px; }
+  .slideshow .arrows .svg {
+    position: relative;
+    left: 0;
+    width: 14px;
+    height: 26px;
+    fill: #fff;
+    transition: left 0.2s ease; }
+
+.map {
+  width: 100%;
+  height: auto;
+  position: relative; }
+  .map h6 {
+    font-size: 30px; }
+  .map h1 {
+    font-size: 50px; }
+  .map img {
+    width: 100%;
+    object-fit: cover; }
+  .map .map-container {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    color: #100f0f;
+    text-align: center;
+    padding: 20px; }
+    .map .map-container a {
+      color: #202020;
+      text-decoration: none;
+      font-size: 25px; }
+    .map .map-container a:hover {
+      text-decoration: underline; }
+
+.news-container .news-fs h3 {
+  padding: 4px;
+  font-size: 30px; }
+
+.news-container .news-fs h1 {
+  padding: 4px;
+  font-size: 80px; }
+
+.news-container .news-fs img {
+  width: 100%;
+  height: 550px;
+  object-fit: cover; }
+
+.news-container .news-details {
+  padding-top: 20px; }
+  .news-container .news-details h6 {
+    padding-top: 5px;
+    padding-bottom: 30px;
+    color: #696969; }
+  .news-container .news-details .news-title-details {
+    display: flex; }
+    .news-container .news-details .news-title-details h1 {
+      width: 800px; }
+    .news-container .news-details .news-title-details a {
+      margin-left: 13%;
+      padding: 10px 25px;
+      border: 1px solid #696969;
+      height: 50px;
+      text-decoration: none;
+      color: #0d0d0d; }
+    .news-container .news-details .news-title-details a:hover {
+      color: #fff;
+      background-color: #0d0d0d; }
+  .news-container .news-details span {
+    color: #696969; }
+
+.new-list ul {
+  padding: 0; }
+  .new-list ul li {
+    padding-top: 50px;
+    list-style: none;
+    display: flex; }
+  .new-list ul img {
+    padding-top: 3px;
+    margin-right: 80px;
+    width: 464px;
+    height: 260px; }
+  .new-list ul h6 {
+    padding: 0px 0px 10px 0px;
+    color: #696969; }
+  .new-list ul a {
+    text-decoration: none;
+    color: #100f0f;
+    background-color: #cecece;
+    padding: 5px;
+    font-size: 13px; }
+  .new-list ul h1 {
+    padding: 10px 0px 0px 0px; }
+  .new-list ul .read-moe a {
+    background-color: #fff;
+    color: #100f0f;
+    padding: 10px 25px;
+    float: right;
+    border: 1px solid #0d0d0d; }
+  .new-list ul .read-moe a:hover {
+    color: #fff;
+    background-color: #0d0d0d; }
+
+.more {
+  padding: 80px 0px; }
+  .more a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #0d0d0d;
+    padding: 15px 80px; }
+  .more a:hover {
+    text-decoration: none;
+    border: 1px solid #0d0d0d;
+    background-color: #fff;
+    color: #0d0d0d; }
