--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class=" navbar" style="background-color: black;" >
+<nav class=" navbar sticky-top" style="background-color: black;" >
  <ul class="navbar-nar pt-3 " style="display: flex;">
     <li class="nav-item mx-2 " style="list-style: none;">
       <a href="#"><img src="/img/Lamborghini_Logo.svg.png" alt="" style="width: 50px; height:60px;"></a>
